Remove topfood stuff accidenally merged in.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Description:  Siteorigin Child Theme
  Author:       Rasmus Jürs
  Author URI:   http://example.com
- Template:     siteorigin-north
+ Template:     siteorigin-unwind
  Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
